Bug 509135 - result from calculator widget is not preserved
Summary: result from calculator widget is not preserved
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: FreeBSD Ports FreeBSD
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-05 06:23 UTC by Andriy Gapon
Modified: 2025-09-06 13:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andriy Gapon 2025-09-05 06:23:26 UTC
SUMMARY

A result from the calculator widget in the transaction entry "dialog" is not always preserved.

STEPS TO REPRODUCE
1.  Create and enter a transaction with an amount of, say, 100.
2. Duplicate the transaction.
3. Double-click the new transaction to edit it.
4. Click the calculator button in the amount field.
5. Do some operation in the calculator widget, e.g., + 100 and press Enter key.
6. Do not click anything else in the dialog, just click Enter button.

OBSERVED RESULT

After step 5 I see 200 in the Amount field.
After step 6 (in the entered transaction) the Amount is 100 again.

EXPECTED RESULT

The amount stays 200 as has been calculated.
Comment 1 Andriy Gapon 2025-09-05 06:25:24 UTC
There is a workaround: if after exiting the calculator widget, in step 6, I simply click into the amount field before clicking Enter button, then the amount is correctly saved.
Comment 2 Thomas Baumgart 2025-09-06 13:30:57 UTC
Git commit d1441bf7990c3e134554b56eb689cc5fafabfa41 by Thomas Baumgart.
Committed on 06/09/2025 at 13:07.
Pushed by tbaumgart into branch 'master'.

Emit signal when returning value from calculator in amount widget
FIXED-IN: 5.2.2

M  +1    -0    kmymoney/widgets/amountedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/d1441bf7990c3e134554b56eb689cc5fafabfa41
Comment 3 Thomas Baumgart 2025-09-06 13:36:17 UTC
Git commit b00f7681a8fbf12b036374fd68a2eaa577e5befe by Thomas Baumgart.
Committed on 06/09/2025 at 13:35.
Pushed by tbaumgart into branch '5.2'.

Emit signal when returning value from calculator in amount widget
FIXED-IN: 5.2.2
(cherry picked from commit d1441bf7990c3e134554b56eb689cc5fafabfa41)

M  +1    -0    kmymoney/widgets/amountedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/b00f7681a8fbf12b036374fd68a2eaa577e5befe