Emit signal when returning value from calculator in amount widget

BUG: 509135
FIXED-IN: 5.2.2